Perkin-UAT/force-app/main/default/objects/HCS_HTS_Mapping__mdt/HCS_HTS_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Collaboration Mapping</label>
    <pluralLabel>Collaboration Mappings</pluralLabel>
</CustomObject>