Perkin-UAT/force-app/main/default/objects/HCS_HTS_Mapping__mdt/fields/FAPCLR_Rep__c.field-meta.xml
<CustomField>
    <fullName>FAPCLR_Rep__c</fullName>
    <label>FAPCLR_Rep</label>
    <length>80</length>
    <type>Text</type>
</CustomField>