Perkin-UAT/force-app/main/default/objects/HCS_HTS_Mapping__mdt/fields/HCS_Rep__c.field-meta.xml
<CustomField>
    <fullName>HCS_Rep__c</fullName>
    <label>Opportunity Creator</label>
    <length>80</length>
    <type>Text</type>
</CustomField>