Perkin-UAT/force-app/main/default/objects/HCS_HTS_Mapping__mdt/fields/HTS_Rep__c.field-meta.xml
<CustomField>
    <fullName>HTS_Rep__c</fullName>
    <label>Collaboration Rep</label>
    <length>80</length>
    <type>Text</type>
</CustomField>