Perkin-UAT/force-app/main/default/objects/HCS_HTS_Mapping__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>