Perkin-UAT/force-app/main/default/objects/HCS_HTS_Mapping__mdt/listViews/All_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Mappings</fullName>
    <columns>DeveloperName</columns>
    <columns>State__c</columns>
    <columns>HCS_Rep__c</columns>
    <columns>HTS_Rep__c</columns>
    <columns>FAPCLR_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mappings</label>
    <language>en_US</language>
</ListView>